# 2026-ashin-edge-syn

./: .gitignore  environment.yml  guide.txt  pyproject.toml
app/: main.py
docker/: Dockerfile.jetson  Dockerfile.train
docs/: JETSON_INSTALL_TEST_GUIDE.MD
requirements/: base.txt  dev.txt  edge.txt  train.txt  windows-dev.txt
scripts/: check_env.py  setup_dev.sh
